Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1208,13 +1208,13 @@
        "list"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(budgets)"
+    "type(revenues)"
    ]
   },
   {
