Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1047,7 +1047,8 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    pass"
+    "    rss = []\n",
+    "    points = "
    ]
   },
   {
