Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1048,7 +1048,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rss = []\n",
-    "    points = list(map(lambda x: ))"
+    "    points = list(map(lambda x: zip()))"
    ]
   },
   {
