--- a/index.ipynb
+++ b/index.ipynb
@@ -1047,7 +1047,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss = list(map(lambda x: ))\n",
+    "    rss = list(map(lambda x: residual_sum_squares))\n",
     "    points = list(map(lambda x: zip()))"
    ]
   },
