--- a/index.ipynb
+++ b/index.ipynb
@@ -1042,13 +1042,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-36-54059e389544>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-54059e389544>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'m_values' : m_values, 'rss_values' : rss}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rss = list(map(lambda x: residual_sum_squares(x_values, y_values, x, b), m_values)\n",
-    "    return {'m_values' : m_values}"
+    "    return {'m_values' : m_values, 'rss_values' : rss}"
    ]
   },
   {
