--- a/index.ipynb
+++ b/index.ipynb
@@ -1057,7 +1057,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rss = list(map(lambda x: residual_sum_squares(x_values, y_values, x, b), m_values)\n",
-    "    return {'m_values' : m_values, 'rss_values' : rss}"
+    "    out = ('m_values' : m_values, 'rss_values' : rss}"
    ]
   },
   {
