Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -3030,6 +3030,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(revenues)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
