--- a/index.ipynb
+++ b/index.ipynb
@@ -3142,14 +3142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    return m "
+    "    return m * learning_rate + cost_curve_slope"
    ]
   },
   {
@@ -3161,9 +3161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55647.666668229336"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "current_slope = slope_at(budgets, revenues, 1.7, 133.33333333333326)['slope']\n",
     "updated_m(1.7, .000001, current_slope)\n",
