Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3205,7 +3205,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    pass"
+    "    out = []\n",
+    "    for x in range(steps)"
    ]
   },
   {
