Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3206,7 +3206,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    out = []\n",
-    "    \n",
+    "    updated_m = current_\n",
     "    for x in range(steps):\n",
     "        "
    ]
