--- a/index.ipynb
+++ b/index.ipynb
@@ -3209,7 +3209,7 @@
     "    updated_m = current_m\n",
     "    for x in range(steps):\n",
     "        current_slope = slope_at(x_values, y_values, updated_m, 133.33333333333326)['slope']\n",
-    "        rss = \n",
+    "        rss = residual_sum_squares(x_values, y_values, upda, b) \n",
     "        "
    ]
   },
