--- a/index.ipynb
+++ b/index.ipynb
@@ -3209,8 +3209,8 @@
     "    updated_m = current_m\n",
     "    for x in range(steps):\n",
     "        current_slope = slope_at(x_values, y_values, updated_m, 133.33333333333326)['slope']\n",
-    "        rss = residual_sum_squares(x_values, y_values, upda, b) \n",
-    "        "
+    "        rss = residual_sum_squares(x_values, y_values, updated_m, b) \n",
+    "        out.append({})"
    ]
   },
   {
