--- a/index.ipynb
+++ b/index.ipynb
@@ -3210,7 +3210,7 @@
     "    for x in range(steps):\n",
     "        current_slope = slope_at(x_values, y_values, updated_m, 133.33333333333326)['slope']\n",
     "        rss = residual_sum_squares(x_values, y_values, updated_m, b) \n",
-    "        out.append({})"
+    "        out.append({'m' : updated_m, 'rss'})"
    ]
   },
   {
