--- a/index.ipynb
+++ b/index.ipynb
@@ -3211,7 +3211,7 @@
     "        current_slope = slope_at(x_values, y_values, new_m, 133.33333333333326)['slope']\n",
     "        rss = residual_sum_squares(x_values, y_values, new_m, b) \n",
     "        out.append({'m' : updated_m, 'rss' : rss, 'slope' : current_slope})\n",
-    "        updated_m = updated_m()"
+    "        new_m = updated_m(new_m)"
    ]
   },
   {
