--- a/index.ipynb
+++ b/index.ipynb
@@ -3200,7 +3200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3208,7 +3208,7 @@
     "    out = []\n",
     "    new_m = current_m\n",
     "    for x in range(steps):\n",
-    "        current_slope = slope_at(x_values, y_values, new_m, 133.33333333333326)['slope']\n",
+    "        current_slope = slope_at(x_values, y_values, new_m, b)['slope']\n",
     "        rss = residual_sum_squares(x_values, y_values, new_m, b) \n",
     "        out.append({'m' : new_m, 'rss' : rss, 'slope' : current_slope})\n",
     "        new_m = updated_m(new_m, learning_rate, current_slope)\n",
@@ -3217,49 +3217,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548312.3333327239},\n",
-       " {'m': 0.5483123333327239,\n",
-       "  'rss': 131439.42559080382,\n",
-       "  'slope': -318021.15333324764},\n",
-       " {'m': 0.8663334866659715,\n",
-       "  'rss': 51532.67441350648,\n",
-       "  'slope': -184452.26893345534},\n",
-       " {'m': 1.0507857555994269,\n",
-       "  'rss': 24650.05492195973,\n",
-       "  'slope': -106982.31598147686},\n",
-       " {'m': 1.1577680715809038,\n",
-       "  'rss': 15605.588455624973,\n",
-       "  'slope': -62049.74326932643},\n",
-       " {'m': 1.21981781485023,\n",
-       "  'rss': 12562.361040112482,\n",
-       "  'slope': -35988.85109619005},\n",
-       " {'m': 1.2558066659464202,\n",
-       "  'rss': 11538.231377719241,\n",
-       "  'slope': -20873.53363582224},\n",
-       " {'m': 1.2766801995822425,\n",
-       "  'rss': 11193.489142596769,\n",
-       "  'slope': -12106.649508768896},\n",
-       " {'m': 1.2887868490910115,\n",
-       "  'rss': 11077.387345019844,\n",
-       "  'slope': -7021.856715127797},\n",
-       " {'m': 1.2958087058061394,\n",
-       "  'rss': 11038.255004699331,\n",
-       "  'slope': -4072.6768947388337},\n",
-       " {'m': 1.2998813827008782,\n",
-       "  'rss': 11025.046981958718,\n",
-       "  'slope': -2362.152598961984},\n",
-       " {'m': 1.30224353529984,\n",
-       "  'rss': 11020.578339103718,\n",
-       "  'slope': -1370.0485074150492}]"
+       "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
+       " {'m': 0.5483169999998062,\n",
+       "  'rss': 131437.9413767516,\n",
+       "  'slope': -318023.86000024853},\n",
+       " {'m': 0.8663408600000547,\n",
+       "  'rss': 51531.31420747324,\n",
+       "  'slope': -184453.83880040026},\n",
+       " {'m': 1.050794698800455,\n",
+       "  'rss': 24649.097944855268,\n",
+       "  'slope': -106983.22650372575},\n",
+       " {'m': 1.1577779253041809,\n",
+       "  'rss': 15604.976802103287,\n",
+       "  'slope': -62050.271372208954},\n",
+       " {'m': 1.2198281966763898,\n",
+       "  'rss': 12561.987166284125,\n",
+       "  'slope': -35989.15739588847},\n",
+       " {'m': 1.2558173540722781,\n",
+       "  'rss': 11538.008028425651,\n",
+       "  'slope': -20873.711289696075},\n",
+       " {'m': 1.2766910653619743,\n",
+       "  'rss': 11193.357340315255,\n",
+       "  'slope': -12106.752547970245},\n",
+       " {'m': 1.2887978179099446,\n",
+       "  'rss': 11077.310067278091,\n",
+       "  'slope': -7021.916477824561},\n",
+       " {'m': 1.295819734387769,\n",
+       "  'rss': 11038.209831325046,\n",
+       "  'slope': -4072.711557128059},\n",
+       " {'m': 1.299892445944897,\n",
+       "  'rss': 11025.020590634533,\n",
+       "  'slope': -2362.172703124088},\n",
+       " {'m': 1.302254618648021,\n",
+       "  'rss': 11020.562895703,\n",
+       "  'slope': -1370.0601677373925}]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
